seletion partially completed

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 }
 
 .flex-item{
-    background: #458cff;
+    background: blue;
     border: 1pt solid black;
 
     border-top-left-radius: 3px;
