--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,11 @@
 }
 
 .bar{
-    text-transform: rotate(-90deg);
+    color: wheat;
 }
 
 .flex-item{
-    background: blue;
     border: 1pt solid black;
-
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     width: 20px;
